// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentManager store reducer when ADD_ATTACHMENT adds an attachment 1`] = `
Object {
  "post-new": Object {
    "file": Array [
      "bar.pdf",
    ],
  },
}
`;

exports[`AttachmentManager store reducer when REMOVE_ATTACHMENT removes an attachment 1`] = `
Object {
  "post-new": Object {
    "file": Array [
      "a.pdf",
      "c.pdf",
    ],
    "image": Array [
      "a.png",
      "b.png",
      "c.png",
    ],
  },
}
`;

exports[`AttachmentManager store reducer when SET_ATTACHMENTS sets attachments 1`] = `
Object {
  "post-new": Object {
    "file": Array [
      "foo.pdf",
      "bar.xls",
    ],
    "image": Array [
      "foo.png",
      "bar.jog",
    ],
  },
}
`;

exports[`AttachmentManager store reducer when SWITCH_ATTACHMENTS switches two attachments 1`] = `
Object {
  "post-new": Object {
    "file": Array [
      "a.pdf",
      "b.pdf",
      "c.pdf",
    ],
    "image": Array [
      "a.png",
      "c.png",
      "b.png",
    ],
  },
}
`;
